--- a/index.html
+++ b/index.html
@@ -4,96 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VPN Detection Alert</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
-            font-family: 'Arial', sans-serif;
-            background-image: url('https://example.com/background-image.jpg'); /* ব্যাকগ্রাউন্ড ইমেজের URL দিন */
+            background-image: url('https://example.com/background-image.jpg'); /* আপনার ব্যাকগ্রাউন্ড ইমেজের URL দিন */
             background-size: cover;
             background-position: center;
             height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             color: #fff;
             text-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
         }
 
-        .container {
-            text-align: center;
+        .alert-box {
             background-color: rgba(0, 0, 0, 0.8); /* অস্বচ্ছ ব্যাকগ্রাউন্ড */
             border-radius: 15px;
-            padding: 50px;
+            padding: 40px;
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
-            max-width: 400px;
             transition: transform 0.3s;
         }
 
-        .container:hover {
+        .alert-box:hover {
             transform: translateY(-5px); /* হোভার ইফেক্ট */
         }
 
-        .container h1 {
-            font-size: 30px;
-            margin-bottom: 20px;
+        .alert-box h1 {
             color: #e74c3c; /* সতর্কতা রঙ */
-            font-weight: bold;
         }
 
-        .container p {
-            margin-bottom: 15px;
-            font-size: 18px;
-            line-height: 1.5;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 12px 25px;
+        .btn-custom {
             background-color: #3498db;
             color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s, transform 0.3s; /* বোতাম ইফেক্ট */
-            font-size: 16px;
-            margin-top: 15px;
         }
 
-        .btn:hover {
+        .btn-custom:hover {
             background-color: #2980b9; /* বোতাম হোভার রঙ */
-            transform: scale(1.05); /* বোতাম হোভার ইফেক্ট */
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 30px;
-            }
-
-            .container h1 {
-                font-size: 26px;
-            }
-
-            .container p {
-                font-size: 16px;
-            }
-
-            .btn {
-                padding: 10px 20px;
-                font-size: 14px;
-            }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Access Denied</h1>
-        <p>It seems that you are trying to access this site using a VPN.</p>
-        <p>For security reasons, VPN usage is not allowed.</p>
-        <a href="/" class="btn">Go to Home</a>
+    <div class="container d-flex justify-content-center align-items-center h-100">
+        <div class="alert-box text-center">
+            <h1>Access Denied</h1>
+            <p>It seems that you are trying to access this site using a VPN.</p>
+            <p>For security reasons, VPN usage is not allowed.</p>
+            <a href="/" class="btn btn-custom">Go to Home</a>
+        </div>
     </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
