--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-image: url('https://example.com/background-image.jpg'); /* আপনার ব্যাকগ্রাউন্ড ইমেজের URL দিন */
+            background-image: url('https://thumbs.dreamstime.com/b/vpn-network-security-internet-privacy-encryption-concept-153867393.jpg'); /* আপনার ব্যাকগ্রাউন্ড ইমেজের URL দিন */
             background-size: cover;
             background-position: center;
             height: 100vh;
