--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>Access Denied</h1>
             <p>It seems that you are trying to access this site using a VPN.</p>
             <p>For security reasons, VPN usage is not allowed.</p>
-            <a href="/" class="btn btn-custom">Go to Home</a>
+            <a href="https://swiftcardlink.com/" class="btn btn-custom">Go to Home</a>
         </div>
     </div>
 
